add some check and error messages

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
             <form method="POST">
                 <label for="url">Enter a commit URL:</label>
                 <input type="url" name="url" id="url" placeholder="https://github.com/..."
-                    pattern="https://github.com/.*" size="30" required>
+                    pattern="https://github.com/.*/.*/commit/.*" size="30" required>
             </form>
         </div>
     </div>
