--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
     <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
+    <link id="favicon" rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+    <link rel="apple-touch-icon" type="image/x-icon" href="assets/images/favicon.ico">
 </head>
 
 <body>
